Add slitaz/index.vi.html (thanks tuananh88c25)

--- a/slitaz/index.cn.html
+++ b/slitaz/index.cn.html
@@ -23,6 +23,7 @@
 	<a href="index.hu.html">hu</a>
 	<a href="index.pt.html">pt</a>
 	<a href="index.ru.html">ru</a>
+	<a href="index.vi.html">vi</a>
 </div>
 
 <!-- content. -->
