--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -23,6 +23,7 @@
 	<strong>hu</strong>
 	<a href="index.pt.html">pt</a>
 	<a href="index.ru.html">ru</a>
+	<a href="index.vi.html">vi</a>
 </div>
 
 <!-- Content. -->
