--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -23,6 +23,7 @@
 	<a href="index.hu.html">hu</a>
 	<strong>pt</strong>
 	<a href="index.ru.html">ru</a>
+	<a href="index.vi.html">vi</a>
 </div>
 
 <!-- Content. -->
