--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -23,6 +23,7 @@
 	<a href="index.hu.html">hu</a>
 	<a href="index.pt.html">pt</a>
 	<strong>ru</strong>
+	<a href="index.vi.html">vi</a>
 </div>
 
 <!-- Content. -->
