Typos in index.fr.html

--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -207,7 +207,7 @@ empaqueté quelques uns des meilleurs lecteurs video disponibles sous GNU/Linux 
 
 <p>
 Par défaut, le bureau de SliTaz n'est pas lancé par l'utilisateur root :
-il demande le mot de passe root (pas défaut <code>root</code>) pour chaque
+il demande le mot de passe root (par défaut <code>root</code>) pour chaque
 action super utilisateur. C'est plus sûr.
 </p>
 <p>
